parser/d_parser2.output
State 205 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: translation_unit
    2        | %empty

    3 translation_unit: source_item
    4                 | translation_unit source_item

    5 source_item: func_def
    6            | class_def
    7            | decl

    8 base_type: INT
    9          | CHAR
   10          | STRING
   11          | BOOL
   12          | FLOAT_TYPE
   13          | DOUBLE
   14          | REAL

   15 array_decl: '[' ']'
   16           | '[' INTEGER ']'
   17           | array_decl '[' ']'
   18           | array_decl '[' INTEGER ']'

   19 type: base_type
   20     | base_type array_decl
   21     | CLASSNAME
   22     | CLASSNAME array_decl

   23 array_init: '[' ']'
   24           | '[' arg_list ']'

   25 initializer: expr
   26            | array_init

   27 prim_expr: IDENT
   28          | INTEGER
   29          | FLOATVAL
   30          | CHARVAL
   31          | STR
   32          | TRUE
   33          | FALSE
   34          | NULL_CONST
   35          | NAN_CONST
   36          | THIS
   37          | '(' expr ')'
   38          | NEW CLASSNAME array_decl
   39          | NEW F_IDENT '(' ')'
   40          | NEW F_IDENT '(' arg_list ')'
   41          | NEW base_type

   42 postfix_expr: prim_expr
   43             | postfix_expr '[' expr ']'
   44             | postfix_expr '[' expr DOTDOT expr ']'
   45             | postfix_expr '.' IDENT
   46             | postfix_expr '.' F_IDENT '(' ')'
   47             | postfix_expr '.' F_IDENT '(' arg_list ')'
   48             | postfix_expr '(' ')'
   49             | postfix_expr '(' arg_list ')'
   50             | SUPER '.' IDENT
   51             | SUPER '.' F_IDENT '(' ')'
   52             | SUPER '.' F_IDENT '(' arg_list ')'

   53 unary_expr: postfix_expr
   54           | MINUS unary_expr
   55           | PLUS unary_expr
   56           | UNOT unary_expr
   57           | BITNOT unary_expr

   58 mult_expr: unary_expr
   59          | mult_expr STAR unary_expr
   60          | mult_expr SLASH unary_expr

   61 add_expr: mult_expr
   62         | add_expr PLUS mult_expr
   63         | add_expr MINUS mult_expr

   64 rel_expr: add_expr
   65         | rel_expr LT add_expr
   66         | rel_expr GT add_expr
   67         | rel_expr LE add_expr
   68         | rel_expr GE add_expr

   69 eq_expr: rel_expr
   70        | eq_expr EQ rel_expr
   71        | eq_expr NEQ rel_expr

   72 land_expr: eq_expr
   73          | land_expr LAND eq_expr

   74 lor_expr: land_expr
   75         | lor_expr LOR land_expr

   76 assign_expr: lor_expr
   77            | unary_expr ASSIGN assign_expr
   78            | unary_expr PLUSEQ assign_expr
   79            | unary_expr MINUSEQ assign_expr
   80            | unary_expr STAREQ assign_expr
   81            | unary_expr SLASHEQ assign_expr
   82            | unary_expr TILDEQ assign_expr

   83 expr: assign_expr

   84 arg: expr

   85 arg_list: arg
   86         | arg_list ',' arg

   87 init_decl: IDENT
   88          | IDENT '=' initializer

   89 init_decl_list: init_decl
   90               | init_decl_list ',' init_decl

   91 decl: type init_decl_list ';'

   92 param: type IDENT
   93      | REF base_type IDENT
   94      | type IDENT '=' expr
   95      | REF base_type IDENT '=' expr

   96 param_list: param
   97           | param_list ',' param

   98 stmt: ';'
   99     | expr ';'
  100     | decl
  101     | compound_stmt
  102     | if_stmt
  103     | while_stmt
  104     | do_while_stmt
  105     | for_stmt
  106     | foreach_stmt
  107     | switch_stmt
  108     | RETURN ';'
  109     | RETURN expr ';'
  110     | BREAK ';'
  111     | CONTINUE ';'

  112 stmt_list: stmt
  113          | stmt_list stmt

  114 compound_stmt: '{' '}'
  115              | '{' stmt_list '}'

  116 if_stmt: IF '(' expr ')' stmt
  117        | IF '(' expr ')' stmt ELSE stmt

  118 while_stmt: WHILE '(' expr ')' stmt

  119 do_while_stmt: DO stmt WHILE '(' expr ')' ';'

  120 for_stmt: FOR '(' ';' ';' ')' stmt
  121         | FOR '(' expr ';' ';' ')' stmt
  122         | FOR '(' ';' expr ';' ')' stmt
  123         | FOR '(' expr ';' expr ';' ')' stmt
  124         | FOR '(' ';' ';' expr ')' stmt
  125         | FOR '(' expr ';' ';' expr ')' stmt
  126         | FOR '(' ';' expr ';' expr ')' stmt
  127         | FOR '(' expr ';' expr ';' expr ')' stmt
  128         | FOR '(' decl ';' ')' stmt
  129         | FOR '(' decl expr ';' ')' stmt
  130         | FOR '(' decl ';' expr ')' stmt
  131         | FOR '(' decl expr ';' expr ')' stmt

  132 foreach_stmt: FOREACH '(' IDENT IN expr ')' stmt
  133             | FOREACH '(' type IDENT IN expr ')' stmt

  134 switch_stmt: SWITCH '(' expr ')' '{' case_list '}'
  135            | SWITCH '(' expr ')' '{' '}'

  136 case_list: case_item
  137          | default_item
  138          | case_list case_item
  139          | case_list default_item

  140 case_item: CASE INTEGER ':'
  141          | CASE INTEGER ':' stmt_list

  142 default_item: DEFAULT ':'
  143             | DEFAULT ':' stmt_list

  144 func_def: type F_IDENT '(' ')' func_body
  145         | type F_IDENT '(' param_list ')' func_body
  146         | VOID F_IDENT '(' ')' func_body
  147         | VOID F_IDENT '(' param_list ')' func_body

  148 func_body: compound_stmt
  149          | ';'

  150 class_def: CLASS CLASSNAME '{' class_members '}'
  151          | CLASS CLASSNAME '{' '}'
  152          | CLASS CLASSNAME ':' CLASSNAME '{' class_members '}'
  153          | CLASS CLASSNAME ':' CLASSNAME '{' '}'

  154 class_members: class_member
  155              | class_members class_member

  156 class_member: field_decl
  157             | method_def
  158             | access_spec field_decl
  159             | access_spec method_def
  160             | ctor_def
  161             | dtor_def
  162             | enum_def
  163             | access_spec enum_def

  164 access_spec: PUBLIC
  165            | PRIVATE
  166            | PROTECTED

  167 field_decl: type IDENT ';'
  168           | type IDENT '=' initializer ';'

  169 method_def: type F_IDENT '(' ')' compound_stmt
  170           | type F_IDENT '(' param_list ')' compound_stmt
  171           | VOID F_IDENT '(' ')' compound_stmt
  172           | VOID F_IDENT '(' param_list ')' compound_stmt
  173           | OVERRIDE type F_IDENT '(' ')' compound_stmt
  174           | OVERRIDE type F_IDENT '(' param_list ')' compound_stmt
  175           | OVERRIDE VOID F_IDENT '(' ')' compound_stmt
  176           | OVERRIDE VOID F_IDENT '(' param_list ')' compound_stmt

  177 ctor_def: THIS '(' ')' compound_stmt
  178         | THIS '(' param_list ')' compound_stmt

  179 dtor_def: '~' THIS '(' ')' compound_stmt

  180 enum_def: ENUM IDENT '{' enum_body '}'
  181         | ENUM '{' enum_body '}'

  182 enum_body: IDENT
  183          | IDENT '=' INTEGER
  184          | enum_body ',' IDENT
  185          | enum_body ',' IDENT '=' INTEGER


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 37 39 40 46 47 48 49 51 52 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 144 145 146 147 169 170 171 172 173 174 175 176 177 178 179
    ')' (41) 37 39 40 46 47 48 49 51 52 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 144 145 146 147 169 170 171 172 173 174 175 176 177 178 179
    ',' (44) 86 90 97 184 185
    '.' (46) 45 46 47 50 51 52
    ':' (58) 140 141 142 143 152 153
    ';' (59) 91 98 99 108 109 110 111 119 120 121 122 123 124 125 126 127 128 129 130 131 149 167 168
    '=' (61) 88 94 95 168 183 185
    '[' (91) 15 16 17 18 23 24 43 44
    ']' (93) 15 16 17 18 23 24 43 44
    '{' (123) 114 115 134 135 150 151 152 153 180 181
    '}' (125) 114 115 134 135 150 151 152 153 180 181
    '~' (126) 179
    error (256)
    INT (258) 8
    CHAR (259) 9
    STRING (260) 10
    BOOL (261) 11
    FLOAT_TYPE (262) 12
    DOUBLE (263) 13
    REAL (264) 14
    VOID (265) 146 147 171 172 175 176
    IF (266) 116 117
    ELSE (267) 117
    SWITCH (268) 134 135
    CASE (269) 140 141
    DEFAULT (270) 142 143
    WHILE (271) 118 119
    DO (272) 119
    FOR (273) 120 121 122 123 124 125 126 127 128 129 130 131
    FOREACH (274) 132 133
    IN (275) 132 133
    RETURN (276) 108 109
    BREAK (277) 110
    CONTINUE (278) 111
    CLASS (279) 150 151 152 153
    OVERRIDE (280) 173 174 175 176
    SUPER (281) 50 51 52
    PUBLIC (282) 164
    PRIVATE (283) 165
    PROTECTED (284) 166
    THIS (285) 36 177 178 179
    REF (286) 93 95
    NEW (287) 38 39 40 41
    ENUM (288) 180 181
    TRUE (289) 32
    FALSE (290) 33
    NULL_CONST (291) 34
    NAN_CONST (292) 35
    DOTDOT (293) 44
    INTEGER (294) 16 18 28 140 141 183 185
    FLOATVAL (295) 29
    STR (296) 31
    CHARVAL (297) 30
    IDENT (298) 27 45 50 87 88 92 93 94 95 132 133 167 168 180 182 183 184 185
    F_IDENT (299) 39 40 46 47 51 52 144 145 146 147 169 170 171 172 173 174 175 176
    CLASSNAME (300) 21 22 38 150 151 152 153
    ASSIGN (301) 77
    PLUSEQ (302) 78
    MINUSEQ (303) 79
    STAREQ (304) 80
    SLASHEQ (305) 81
    TILDEQ (306) 82
    LOR (307) 75
    LAND (308) 73
    EQ (309) 70
    NEQ (310) 71
    LT (311) 65
    GT (312) 66
    LE (313) 67
    GE (314) 68
    PLUS (315) 55 62
    MINUS (316) 54 63
    STAR (317) 59
    SLASH (318) 60
    UNOT (319) 56
    UMINUS (320)
    UPLUS (321)
    BITNOT (322) 57
    LOWER_THAN_ELSE (323)


Nonterminals, with rules where they appear

    $accept (81)
        on left: 0
    program (82)
        on left: 1 2
        on right: 0
    translation_unit (83)
        on left: 3 4
        on right: 1 4
    source_item (84)
        on left: 5 6 7
        on right: 3 4
    base_type (85)
        on left: 8 9 10 11 12 13 14
        on right: 19 20 41 93 95
    array_decl (86)
        on left: 15 16 17 18
        on right: 17 18 20 22 38
    type (87)
        on left: 19 20 21 22
        on right: 91 92 94 133 144 145 167 168 169 170 173 174
    array_init (88)
        on left: 23 24
        on right: 26
    initializer (89)
        on left: 25 26
        on right: 88 168
    prim_expr (90)
        on left: 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41
        on right: 42
    postfix_expr (91)
        on left: 42 43 44 45 46 47 48 49 50 51 52
        on right: 43 44 45 46 47 48 49 53
    unary_expr (92)
        on left: 53 54 55 56 57
        on right: 54 55 56 57 58 59 60 77 78 79 80 81 82
    mult_expr (93)
        on left: 58 59 60
        on right: 59 60 61 62 63
    add_expr (94)
        on left: 61 62 63
        on right: 62 63 64 65 66 67 68
    rel_expr (95)
        on left: 64 65 66 67 68
        on right: 65 66 67 68 69 70 71
    eq_expr (96)
        on left: 69 70 71
        on right: 70 71 72 73
    land_expr (97)
        on left: 72 73
        on right: 73 74 75
    lor_expr (98)
        on left: 74 75
        on right: 75 76
    assign_expr (99)
        on left: 76 77 78 79 80 81 82
        on right: 77 78 79 80 81 82 83
    expr (100)
        on left: 83
        on right: 25 37 43 44 84 94 95 99 109 116 117 118 119 121 122 123 124 125 126 127 129 130 131 132 133 134 135
    arg (101)
        on left: 84
        on right: 85 86
    arg_list (102)
        on left: 85 86
        on right: 24 40 47 49 52 86
    init_decl (103)
        on left: 87 88
        on right: 89 90
    init_decl_list (104)
        on left: 89 90
        on right: 90 91
    decl (105)
        on left: 91
        on right: 7 100 128 129 130 131
    param (106)
        on left: 92 93 94 95
        on right: 96 97
    param_list (107)
        on left: 96 97
        on right: 97 145 147 170 172 174 176 178
    stmt (108)
        on left: 98 99 100 101 102 103 104 105 106 107 108 109 110 111
        on right: 112 113 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133
    stmt_list (109)
        on left: 112 113
        on right: 113 115 141 143
    compound_stmt (110)
        on left: 114 115
        on right: 101 148 169 170 171 172 173 174 175 176 177 178 179
    if_stmt (111)
        on left: 116 117
        on right: 102
    while_stmt (112)
        on left: 118
        on right: 103
    do_while_stmt (113)
        on left: 119
        on right: 104
    for_stmt (114)
        on left: 120 121 122 123 124 125 126 127 128 129 130 131
        on right: 105
    foreach_stmt (115)
        on left: 132 133
        on right: 106
    switch_stmt (116)
        on left: 134 135
        on right: 107
    case_list (117)
        on left: 136 137 138 139
        on right: 134 138 139
    case_item (118)
        on left: 140 141
        on right: 136 138
    default_item (119)
        on left: 142 143
        on right: 137 139
    func_def (120)
        on left: 144 145 146 147
        on right: 5
    func_body (121)
        on left: 148 149
        on right: 144 145 146 147
    class_def (122)
        on left: 150 151 152 153
        on right: 6
    class_members (123)
        on left: 154 155
        on right: 150 152 155
    class_member (124)
        on left: 156 157 158 159 160 161 162 163
        on right: 154 155
    access_spec (125)
        on left: 164 165 166
        on right: 158 159 163
    field_decl (126)
        on left: 167 168
        on right: 156 158
    method_def (127)
        on left: 169 170 171 172 173 174 175 176
        on right: 157 159
    ctor_def (128)
        on left: 177 178
        on right: 160
    dtor_def (129)
        on left: 179
        on right: 161
    enum_def (130)
        on left: 180 181
        on right: 162 163
    enum_body (131)
        on left: 182 183 184 185
        on right: 180 181 184 185


State 0

    0 $accept: . program $end

    INT         shift, and go to state 1
    CHAR        shift, and go to state 2
    STRING      shift, and go to state 3
    BOOL        shift, and go to state 4
    FLOAT_TYPE  shift, and go to state 5
    DOUBLE      shift, and go to state 6
    REAL        shift, and go to state 7
    VOID        shift, and go to state 8
    CLASS       shift, and go to state 9
    CLASSNAME   shift, and go to state 10

    $default  reduce using rule 2 (program)

    program           go to state 11
    translation_unit  go to state 12
    source_item       go to state 13
    base_type         go to state 14
    type              go to state 15
    decl              go to state 16
    func_def          go to state 17
    class_def         go to state 18


State 1

    8 base_type: INT .

    $default  reduce using rule 8 (base_type)


State 2

    9 base_type: CHAR .

    $default  reduce using rule 9 (base_type)


State 3

   10 base_type: STRING .

    $default  reduce using rule 10 (base_type)


State 4

   11 base_type: BOOL .

    $default  reduce using rule 11 (base_type)


State 5

   12 base_type: FLOAT_TYPE .

    $default  reduce using rule 12 (base_type)


State 6

   13 base_type: DOUBLE .

    $default  reduce using rule 13 (base_type)


State 7

   14 base_type: REAL .

    $default  reduce using rule 14 (base_type)


State 8

  146 func_def: VOID . F_IDENT '(' ')' func_body
  147         | VOID . F_IDENT '(' param_list ')' func_body

    F_IDENT  shift, and go to state 19


State 9

  150 class_def: CLASS . CLASSNAME '{' class_members '}'
  151          | CLASS . CLASSNAME '{' '}'
  152          | CLASS . CLASSNAME ':' CLASSNAME '{' class_members '}'
  153          | CLASS . CLASSNAME ':' CLASSNAME '{' '}'

    CLASSNAME  shift, and go to state 20


State 10

   21 type: CLASSNAME .
   22     | CLASSNAME . array_decl

    '['  shift, and go to state 21

    $default  reduce using rule 21 (type)

    array_decl  go to state 22


State 11

    0 $accept: program . $end

    $end  shift, and go to state 23


State 12

    1 program: translation_unit .
    4 translation_unit: translation_unit . source_item

    INT         shift, and go to state 1
    CHAR        shift, and go to state 2
    STRING      shift, and go to state 3
    BOOL        shift, and go to state 4
    FLOAT_TYPE  shift, and go to state 5
    DOUBLE      shift, and go to state 6
    REAL        shift, and go to state 7
    VOID        shift, and go to state 8
    CLASS       shift, and go to state 9
    CLASSNAME   shift, and go to state 10

    $default  reduce using rule 1 (program)

    source_item  go to state 24
    base_type    go to state 14
    type         go to state 15
    decl         go to state 16
    func_def     go to state 17
    class_def    go to state 18


State 13

    3 translation_unit: source_item .

    $default  reduce using rule 3 (translation_unit)


State 14

   19 type: base_type .
   20     | base_type . array_decl

    '['  shift, and go to state 21

    $default  reduce using rule 19 (type)

    array_decl  go to state 25


State 15

   91 decl: type . init_decl_list ';'
  144 func_def: type . F_IDENT '(' ')' func_body
  145         | type . F_IDENT '(' param_list ')' func_body

    IDENT    shift, and go to state 26
    F_IDENT  shift, and go to state 27

    init_decl       go to state 28
    init_decl_list  go to state 29


State 16

    7 source_item: decl .

    $default  reduce using rule 7 (source_item)


State 17

    5 source_item: func_def .

    $default  reduce using rule 5 (source_item)


State 18

    6 source_item: class_def .

    $default  reduce using rule 6 (source_item)


State 19

  146 func_def: VOID F_IDENT . '(' ')' func_body
  147         | VOID F_IDENT . '(' param_list ')' func_body

    '('  shift, and go to state 30


State 20

  150 class_def: CLASS CLASSNAME . '{' class_members '}'
  151          | CLASS CLASSNAME . '{' '}'
  152          | CLASS CLASSNAME . ':' CLASSNAME '{' class_members '}'
  153          | CLASS CLASSNAME . ':' CLASSNAME '{' '}'

    '{'  shift, and go to state 31
    ':'  shift, and go to state 32


State 21

   15 array_decl: '[' . ']'
   16           | '[' . INTEGER ']'

    INTEGER  shift, and go to state 33
    ']'      shift, and go to state 34


State 22

   17 array_decl: array_decl . '[' ']'
   18           | array_decl . '[' INTEGER ']'
   22 type: CLASSNAME array_decl .

    '['  shift, and go to state 35

    $default  reduce using rule 22 (type)


State 23

    0 $accept: program $end .

    $default  accept


State 24

    4 translation_unit: translation_unit source_item .

    $default  reduce using rule 4 (translation_unit)


State 25

   17 array_decl: array_decl . '[' ']'
   18           | array_decl . '[' INTEGER ']'
   20 type: base_type array_decl .

    '['  shift, and go to state 35

    $default  reduce using rule 20 (type)


State 26

   87 init_decl: IDENT .
   88          | IDENT . '=' initializer

    '='  shift, and go to state 36

    $default  reduce using rule 87 (init_decl)


State 27

  144 func_def: type F_IDENT . '(' ')' func_body
  145         | type F_IDENT . '(' param_list ')' func_body

    '('  shift, and go to state 37


State 28

   89 init_decl_list: init_decl .

    $default  reduce using rule 89 (init_decl_list)


State 29

   90 init_decl_list: init_decl_list . ',' init_decl
   91 decl: type init_decl_list . ';'

    ','  shift, and go to state 38
    ';'  shift, and go to state 39


State 30

  146 func_def: VOID F_IDENT '(' . ')' func_body
  147         | VOID F_IDENT '(' . param_list ')' func_body

    INT         shift, and go to state 1
    CHAR        shift, and go to state 2
    STRING      shift, and go to state 3
    BOOL        shift, and go to state 4
    FLOAT_TYPE  shift, and go to state 5
    DOUBLE      shift, and go to state 6
    REAL        shift, and go to state 7
    REF         shift, and go to state 40
    CLASSNAME   shift, and go to state 10
    ')'         shift, and go to state 41

    base_type   go to state 14
    type        go to state 42
    param       go to state 43
    param_list  go to state 44


State 31

  150 class_def: CLASS CLASSNAME '{' . class_members '}'
  151          | CLASS CLASSNAME '{' . '}'

    INT         shift, and go to state 1
    CHAR        shift, and go to state 2
    STRING      shift, and go to state 3
    BOOL        shift, and go to state 4
    FLOAT_TYPE  shift, and go to state 5
    DOUBLE      shift, and go to state 6
    REAL        shift, and go to state 7
    VOID        shift, and go to state 45
    OVERRIDE    shift, and go to state 46
    PUBLIC      shift, and go to state 47
    PRIVATE     shift, and go to state 48
    PROTECTED   shift, and go to state 49
    THIS        shift, and go to state 50
    ENUM        shift, and go to state 51
    CLASSNAME   shift, and go to state 10
    '}'         shift, and go to state 52
    '~'         shift, and go to state 53

    base_type      go to state 14
    type           go to state 54
    class_members  go to state 55
    class_member   go to state 56
    access_spec    go to state 57
    field_decl     go to state 58
    method_def     go to state 59
    ctor_def       go to state 60
    dtor_def       go to state 61
    enum_def       go to state 62


State 32

  152 class_def: CLASS CLASSNAME ':' . CLASSNAME '{' class_members '}'
  153          | CLASS CLASSNAME ':' . CLASSNAME '{' '}'

    CLASSNAME  shift, and go to state 63


State 33

   16 array_decl: '[' INTEGER . ']'

    ']'  shift, and go to state 64


State 34

   15 array_decl: '[' ']' .

    $default  reduce using rule 15 (array_decl)


State 35

   17 array_decl: array_decl '[' . ']'
   18           | array_decl '[' . INTEGER ']'

    INTEGER  shift, and go to state 65
    ']'      shift, and go to state 66


State 36

   88 init_decl: IDENT '=' . initializer

    SUPER       shift, and go to state 67
    THIS        shift, and go to state 68
    NEW         shift, and go to state 69
    TRUE        shift, and go to state 70
    FALSE       shift, and go to state 71
    NULL_CONST  shift, and go to state 72
    NAN_CONST   shift, and go to state 73
    INTEGER     shift, and go to state 74
    FLOATVAL    shift, and go to state 75
    STR         shift, and go to state 76
    CHARVAL     shift, and go to state 77
    IDENT       shift, and go to state 78
    PLUS        shift, and go to state 79
    MINUS       shift, and go to state 80
    UNOT        shift, and go to state 81
    BITNOT      shift, and go to state 82
    '['         shift, and go to state 83
    '('         shift, and go to state 84

    array_init    go to state 85
    initializer   go to state 86
    prim_expr     go to state 87
    postfix_expr  go to state 88
    unary_expr    go to state 89
    mult_expr     go to state 90
    add_expr      go to state 91
    rel_expr      go to state 92
    eq_expr       go to state 93
    land_expr     go to state 94
    lor_expr      go to state 95
    assign_expr   go to state 96
    expr          go to state 97


State 37

  144 func_def: type F_IDENT '(' . ')' func_body
  145         | type F_IDENT '(' . param_list ')' func_body

    INT         shift, and go to state 1
    CHAR        shift, and go to state 2
    STRING      shift, and go to state 3
    BOOL        shift, and go to state 4
    FLOAT_TYPE  shift, and go to state 5
    DOUBLE      shift, and go to state 6
    REAL        shift, and go to state 7
    REF         shift, and go to state 40
    CLASSNAME   shift, and go to state 10
    ')'         shift, and go to state 98

    base_type   go to state 14
    type        go to state 42
    param       go to state 43
    param_list  go to state 99


State 38

   90 init_decl_list: init_decl_list ',' . init_decl

    IDENT  shift, and go to state 26

    init_decl  go to state 100


State 39

   91 decl: type init_decl_list ';' .

    $default  reduce using rule 91 (decl)


State 40

   93 param: REF . base_type IDENT
   95      | REF . base_type IDENT '=' expr

    INT         shift, and go to state 1
    CHAR        shift, and go to state 2
    STRING      shift, and go to state 3
    BOOL        shift, and go to state 4
    FLOAT_TYPE  shift, and go to state 5
    DOUBLE      shift, and go to state 6
    REAL        shift, and go to state 7

    base_type  go to state 101


State 41

  146 func_def: VOID F_IDENT '(' ')' . func_body

    ';'  shift, and go to state 102
    '{'  shift, and go to state 103

    compound_stmt  go to state 104
    func_body      go to state 105


State 42

   92 param: type . IDENT
   94      | type . IDENT '=' expr

    IDENT  shift, and go to state 106


State 43

   96 param_list: param .

    $default  reduce using rule 96 (param_list)


State 44

   97 param_list: param_list . ',' param
  147 func_def: VOID F_IDENT '(' param_list . ')' func_body

    ')'  shift, and go to state 107
    ','  shift, and go to state 108


State 45

  171 method_def: VOID . F_IDENT '(' ')' compound_stmt
  172           | VOID . F_IDENT '(' param_list ')' compound_stmt

    F_IDENT  shift, and go to state 109


State 46

  173 method_def: OVERRIDE . type F_IDENT '(' ')' compound_stmt
  174           | OVERRIDE . type F_IDENT '(' param_list ')' compound_stmt
  175           | OVERRIDE . VOID F_IDENT '(' ')' compound_stmt
  176           | OVERRIDE . VOID F_IDENT '(' param_list ')' compound_stmt
